.vitepress/theme/style.css
@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  font-display: swap;
  font-weight: 100 800;
  src: url(@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2)
    format("woff2-variations");
}

:root {
  --vp-c-blue-1: #1662c5;
  --vp-c-blue-2: #2275da;
  --vp-c-blue-3: #5c9de4;
  --vp-c-blue-soft: rgba(52, 130, 219, 0.14);

  --vp-c-brand-1: var(--vp-c-blue-3);
  --vp-c-brand-2: var(--vp-c-blue-2);
  --vp-c-brand-3: var(--vp-c-blue-1);
  --vp-c-brand-soft: var(--vp-c-blue-soft);

  --vp-home-hero-name-color: transparent;
  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #3463fe 30%, #4787ff);

  --font-family-base:
    "Inter", ui-sans-serif, system-ui, sans-serif, "Noto Color Emoji", "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol";
  --vp-font-family-base: var(--font-family-base);
  --vp-font-family-mono:
    "JetBrains Mono", ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New",
    monospace;
}

:root:where(:lang(zh)) {
  --vp-font-family-base: "Punctuation SC", var(--font-family-base);
}

:root:not(.dark) .dark-only,
:root:is(.dark) .light-only {
  display: none;
}

* {
  scrollbar-width: thin;
  scrollbar-color: var(--vp-c-gray-1) transparent;
}

html:has(dialog#fullscreen[open], div.VPLocalSearchBox) {
  scrollbar-gutter: stable;
  overflow: hidden;
}

::view-transition-group(code-block-view-transition) {
  overflow: hidden;
  border-radius: 12px;
}

::view-transition-group(root) {
  animation: none;
}

code,
pre {
  tab-size: 2 !important;
  font-variant-ligatures: none;
}

div[class*="language-"] button.copy.fullscreen {
  background-image: unset;

  svg {
    margin: auto;
    color: #808080;
  }

  + button.copy {
    right: 64px;
  }
}

/* Description at the top of pages */
p[role="doc-subtitle"] {
  margin-block: 1rem;
  font-style: italic;
  font-size: 0.8rem;
  line-height: 1.5;
  text-align: left;
  text-wrap: balance;
  color: var(--vp-c-text-3);
}

body:has(.VPFooter:not(.has-sidebar)) .aside-container {
  padding-bottom: 64px;
}

@media (min-width: 1525px) {
  .aside-container,
  .aside-curtain {
    width: 300px !important;
  }
}

.VPHome {
  margin-bottom: 0 !important;

  p.tagline {
    text-wrap: balance;
  }
}

.VPLocalSearchBox > .backdrop {
  opacity: 0;
  animation: show 150ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
}

.VPLocalSearchBox > .shell {
  animation: show 250ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
  opacity: 0;
  transform: rotateX(-90deg);
  transform-origin: top center;
}

@keyframes show {
  100% {
    opacity: 1;
    transform: none;
  }
}

.medium-zoom-overlay {
  z-index: 10000;
}

.medium-zoom-image--opened {
  z-index: 10001;
}

kbd:not(.DocSearch-Button-Key) {
  background-color: #eee !important;
  border-radius: 3px;
  border: 1px solid #b4b4b4;
  box-shadow:
    0 1px 1px rgba(0, 0, 0, 0.2),
    0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
  color: #333;
  display: inline-block;
  font-size: 0.85em;
  font-weight: 700;
  line-height: 1;
  padding: 5px;
  white-space: nowrap;
}

.vp-doc > p > img,
.vp-doc > div > p > img,
.medium-zoom-image--opened {
  margin-left: auto;
  margin-right: auto;
  box-shadow: 0 4px 10px #8883;
  border-radius: 8px;
}

h1 > .VPBadge {
  font-family: var(--vp-font-family-mono);
  padding: 5px 12px;
  border-radius: 8px;
}

/* Remove border from headings if that's the first thing in the page */
:is(hgroup) + :is(h1, h2, h3, h4, h5, h6) {
  margin-top: 0;
  border-top: none;
}

